force-app/main/default/objects/Exception_Log__c/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Name of the Apex class where the exception occurred</description>
    <inlineHelpText>Captures the originating class for triage, e.g. AuditTrailComplianceQueueable</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>