force-app/main/default/objects/Exception_Log__c/fields/Async_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Id__c</fullName>
    <description>AsyncApexJob Id of the Queueable/Batch/Schedulable job that threw the exception</description>
    <inlineHelpText>Useful for cross-referencing Setup &gt; Apex Jobs</inlineHelpText>
    <label>Async Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>