force-app/main/default/objects/Exception_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Free-text description of what the code was doing when it failed</description>
    <inlineHelpText>e.g. &apos;Scheduled compliance check — processing SetupAuditTrail batch&apos;</inlineHelpText>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>