force-app/main/default/objects/Exception_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>The Apex exception type</description>
    <inlineHelpText>Populated from e.getTypeName(), e.g. System.NullPointerException, System.DmlException</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>