force-app/main/default/objects/Exception_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Line number in the Apex class where the exception was thrown</description>
    <inlineHelpText>Populated from e.getLineNumber()</inlineHelpText>
    <label>Line Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>