force-app/main/default/objects/Exception_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Name of the method where the exception occurred</description>
    <inlineHelpText>Captures the originating method for triage, e.g. execute, createCasesForViolations</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>