force-app/main/default/objects/Exception_Log__c/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether an alert notification has already been sent for this log</description>
    <inlineHelpText>Prevents duplicate alert emails for the same error on retry</inlineHelpText>
    <label>Notified</label>
    <type>Checkbox</type>
</CustomField>