force-app/main/default/objects/Exception_Log__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>Timestamp when the exception occurred</description>
    <inlineHelpText>Defaults to Datetime.now() at time of logging</inlineHelpText>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>