force-app/main/default/objects/Exception_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Salesforce Id of the record being processed when the exception occurred</description>
    <inlineHelpText>Optional — links the log back to the specific Audit_Trail__c, Case, etc. involved</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>