force-app/main/default/objects/Exception_Log__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this exception has been investigated and resolved</description>
    <inlineHelpText>Manually checked by developer/support team after triage</inlineHelpText>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>