force-app/main/default/objects/Exception_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Full Apex stack trace at time of exception</description>
    <inlineHelpText>Populated from e.getStackTraceString() — used for root-cause debugging</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>