force-app/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Severity__c</columns>
    <columns>Occurred_At__c</columns>
    <columns>Resolved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>