force-app/main/default/objects/Exception_Log__c/listViews/Unresolved_Critical_High.listView-meta.xml
<ListView>
    <fullName>Unresolved_Critical_High</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Severity__c</columns>
    <columns>Occurred_At__c</columns>
    <columns>Resolved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Severity__c</field>
        <operation>contains</operation>
        <value>Critical,High</value>
    </filters>
    <filters>
        <field>Resolved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unresolved Critical/High</label>
</ListView>